[gd_scene load_steps=4 format=3 uid="uid://cm82t1bny8bri"]

[ext_resource type="Script" uid="uid://cynnyugvd83sa" path="res://scenes/ui/pause_menu/pause_menu.gd" id="1_2mh1u"]
[ext_resource type="PackedScene" uid="uid://cvqfsjxwqx2f5" path="res://scenes/ui/options_menu/options_menu.tscn" id="2_2tj5s"]
[ext_resource type="PackedScene" uid="uid://cgvaqwloyyjlr" path="res://scenes/ui/sound_button/sound_button.tscn" id="5_8ytal"]

[node name="pause_menu" type="CanvasLayer" node_paths=PackedStringArray("panel")]
process_mode = 3
script = ExtResource("1_2mh1u")
options_menu_scene = ExtResource("2_2tj5s")
panel = NodePath("margin_container/panel_container")

[node name="dark_background" type="ColorRect" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.39215687)

[node name="margin_container" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="panel_container" type="PanelContainer" parent="margin_container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="margin_container" type="MarginContainer" parent="margin_container/panel_container"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="v_box_container" type="VBoxContainer" parent="margin_container/panel_container/margin_container"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="label_game_title" type="Label" parent="margin_container/panel_container/margin_container/v_box_container"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_font_sizes/font_size = 32
text = "Paused"
horizontal_alignment = 1

[node name="v_box_container" type="VBoxContainer" parent="margin_container/panel_container/margin_container/v_box_container"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="resume_button" parent="margin_container/panel_container/margin_container/v_box_container/v_box_container" instance=ExtResource("5_8ytal")]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"

[node name="options_button" parent="margin_container/panel_container/margin_container/v_box_container/v_box_container" instance=ExtResource("5_8ytal")]
unique_name_in_owner = true
layout_mode = 2
text = "Options"

[node name="quit_button" parent="margin_container/panel_container/margin_container/v_box_container/v_box_container" instance=ExtResource("5_8ytal")]
unique_name_in_owner = true
layout_mode = 2
text = "Quit to Menu"
